log
Thu 24 Aug 2023 08:14:44 PM UTC: 
 list.c | 38 ++++++++++++++++++++------------------
 1 file changed, 20 insertions(+), 18 deletions(-)
 tests:  0|0
785a91f
Thu 24 Aug 2023 08:16:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8e47131
Thu 24 Aug 2023 08:16:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7fdb517
Thu 24 Aug 2023 08:17:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96b262f
Thu 24 Aug 2023 08:18:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af48209
Thu 24 Aug 2023 08:18:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f48796
Thu 24 Aug 2023 08:22:24 PM UTC: 
 list.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   56 |   if (list->head = NULL)
      |       ^~~~
list.c:60:9: error: ‘last’ is used uninitialized [-Werror=uninitialized]
   60 |   Node* last;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
f38a39e
Thu 24 Aug 2023 08:22:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c8b48e6
Thu 24 Aug 2023 08:23:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a72317e
Thu 24 Aug 2023 08:23:45 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
a704358
Thu 24 Aug 2023 08:24:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:10: error: ‘last’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   64 |   return last;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
27b1552
Thu 24 Aug 2023 08:24:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f297d4f
Thu 24 Aug 2023 08:26:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
6e1b467
Thu 24 Aug 2023 08:27:34 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
0fc8431
Thu 24 Aug 2023 08:29:56 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
ffcd658
Thu 24 Aug 2023 08:30:13 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
e20f36b
Thu 24 Aug 2023 08:31:03 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
ecc221b
Thu 24 Aug 2023 08:31:25 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
871a75f
Thu 24 Aug 2023 08:31:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
048fa5c
Thu 24 Aug 2023 08:32:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
994e59f
Thu 24 Aug 2023 08:32:39 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
b08ab5c
Thu 24 Aug 2023 08:34:31 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5cc66f0
Thu 24 Aug 2023 08:34:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0561a41
Thu 24 Aug 2023 08:39:06 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:92:9: error: unused variable ‘new’ [-Werror=unused-variable]
   92 |   Node* new = malloc(sizeof(Node));
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
fdffaf8
Thu 24 Aug 2023 08:43:03 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
60b630c
Thu 24 Aug 2023 08:43:35 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
5b2e397
Thu 24 Aug 2023 08:44:46 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
a3d57bd
Thu 24 Aug 2023 08:45:51 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
150adda
Thu 24 Aug 2023 08:47:27 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
378d431
Thu 24 Aug 2023 08:49:11 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
296959c
Thu 24 Aug 2023 08:50:43 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
5f09db2
Thu 24 Aug 2023 08:52:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
f7b4b56
Thu 24 Aug 2023 08:59:03 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:112:9: error: unused variable ‘new’ [-Werror=unused-variable]
  112 |   Node *new = createNode(data);
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
e59d941
Thu 24 Aug 2023 09:00:49 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:112:9: error: unused variable ‘new’ [-Werror=unused-variable]
  112 |   Node *new = createNode(data);
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
ca05c06
Thu 24 Aug 2023 09:00:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c2d1a1a
